tests/miniJava/neg/004375_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public System.out.println java ( ) { return 0 ; } }
